Poprawione wszystkie klasy oraz metody