@@ -1,8 +1,12 @@
 package com.Mattheo992.schoolapplication.Repository;
 
 import com.Mattheo992.schoolapplication.Model.Student;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Repository;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -18,14 +22,14 @@ public class StudentRepository {
 
     public Optional<Student> getStudentById(Long id) {
         return students.stream()
-                .filter(student -> id.equals(student.getId()))
+                .filter(student -> student.getId().equals(id))
                 .findFirst();
     }
 
-    public List<Student> getStudentsWithTheSameLastName(String lastName) {
+    public List<Student> getStudents(String lastName) {
         return students.stream()
-                .filter(student -> lastName.equals(student.getLastName()))
-                .collect(Collectors.toList());
+                .filter(student -> student.getLastName() != null && student.getLastName().equalsIgnoreCase(lastName))
+                .toList();
     }
 
     public Student createStudent(Student student) {
@@ -34,27 +38,36 @@ public class StudentRepository {
     }
 
     public void deleteStudent(Long id) {
-        students.removeIf(student -> id.equals(student.getId()));
+        Student student = getStudentById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Student with given id does not exist!"));
+        students.remove(student);
     }
 
-    public void editStudent(Long id, Student newStudent) {
-        Optional<Student> editedStudent = getStudentById(id);
-        if (editedStudent.isPresent()) {
-            Student studentToUpdate = editedStudent.get();
-            studentToUpdate.setPhoneNumber(newStudent.getPhoneNumber());
-            studentToUpdate.setFirstName(newStudent.getFirstName());
-            studentToUpdate.setLastName(newStudent.getLastName());
-            studentToUpdate.setBirthday(newStudent.getBirthday());
-            studentToUpdate.setPesel(newStudent.getPesel());
-            studentToUpdate.setSex(newStudent.getSex());
-        }
+    public Student editStudent(Long id, Student newStudent) {
+        Student student = getStudentById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Student with given id does not exist"));
+        student.setId(newStudent.getId());
+        student.setPhoneNumber(newStudent.getPhoneNumber());
+        student.setFirstName(newStudent.getFirstName());
+        student.setLastName(newStudent.getLastName());
+        student.setBirthday(newStudent.getBirthday());
+        student.setPesel(newStudent.getPesel());
+        student.setSex(newStudent.getSex());
+        return student;
     }
 
-    public void editStudentPhoneNumber(Long id, String newPhoneNumber) {
-        Optional<Student> editedStudent = getStudentById(id);
-        if (editedStudent.isPresent()) {
-            Student studentToUpdate = editedStudent.get();
-            studentToUpdate.setPhoneNumber(newPhoneNumber);
-        }
+
+    public Student editStudentPhoneNumber(Long id, Student newStudent) {
+        Student student = getStudentById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Student with given id does not exist"));
+        student.setPhoneNumber(newStudent.getPhoneNumber());
+        return student;
+    }
+
+    public Student editStudentBirthday(Long id, Student newStudent) {
+        Student student = getStudentById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Student with given id does not exist!"));
+        student.setBirthday(newStudent.getBirthday());
+        return student;
     }
 }
